--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ drift.load('uz7p5wft26gs');
 
 
 
-  <title> Raveesh Nilaweera - Portfolio Website </title>
+  <title> Raveesh Nilaweera - Portfolio Website .</title>
   <link rel="shortcut icon" href="img/profile-img.png" type="image/x-icon">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
